
ADD_DEFINITIONS(-DFREEGLUT_STATIC -D_CRT_SECURE_NO_WARNINGS)
ADD_EXECUTABLE(localizer localizer.cpp glutapp.cpp)

IF(WIN32)
	TARGET_LINK_LIBRARIES(localizer debug mrcore_d freeglut_static)
ELSE(WIN32) #LINUX	
	TARGET_LINK_LIBRARIES(simulator mrcore ${OPENGL_LIBRARIES} ${GLUT_LIBRARIES} )
ENDIF(WIN32)
		




